--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spotify-clone",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.17",
+    "expo": "53.0.20",
+    "expo-constants": "~17.1.7",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "^2.4.0",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-image-colors": "^2.5.0",
+    "react-native-reanimated": "~3.17.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
