--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ui": "0.1.1-alpha.10",
     "expo": "53.0.20",
     "expo-constants": "~17.1.7",
     "expo-haptics": "~14.1.4",
