--- a/package.json
+++ b/package.json
@@ -9,31 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/ui": "0.1.1-alpha.10",
-    "expo": "53.0.20",
-    "expo-constants": "~17.1.7",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "^2.4.0",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-status-bar": "~2.2.3",
+    "@expo/metro-runtime": "~6.1.2",
+    "@rn-vui/themed": "^5.1.8",
+    "@rneui/base": "4.0.0-rc.8",
+    "expo": "54.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "^3.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.6",
+    "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.539.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-image-colors": "^2.5.0",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.21.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.13",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
